final final fix for image visibility... hopefully :)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,7 +221,7 @@ aside {
 }
 
 #horiseon:hover {
-    background-image: url("../images/horiseon-demo.jpg");
+    background-image: url("../images/horiseon-demo.JPG");
 }
 
 #password-gen {
